--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       </div>
     </div>
   </div>
-  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/angular/angular.min.js"></script>
-  <script src="../bower_components/Materialize/dist/js/materialize.min.js"></script>
-  <script src="../bower_components/angular-materialize/src/angular-materialize.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/Materialize/dist/js/materialize.min.js"></script>
+  <script src="/bower_components/angular-materialize/src/angular-materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/main.js"></script>
 </body>
